# mcp-lab

./: .gitignore  README copy.md  Readme.md  requirements.txt
crash-course/: Readme.md  get_latest_news.py  stock_news.py
mcp-crash-course/: README.md
mcp-crash-course/configs/: multiple_tools.json  single_tool.json
mcp_crash_course/: README.md  pyproject.toml
mcp_crash_course/Schema/: Untitled Diagram.drawio  project_schema.drawio
mcp_crash_course/anthropic_developer_config_templates/using_pip/: multiple_tools.json  single_tool.json
mcp_crash_course/anthropic_developer_config_templates/using_uv/: multiple_tools.json  single_tool.json
mcp_crash_course/src/: daily_news_server.py  external_tools_mcp_ollama.py  mpc-with-ollama.py  multi_agent_mcp_ollama.py  multi_tools_agent_mcp_ollama.py  single_agent_mcp_ollama.py  single_agent_mcp_openai.py  single_tool_agent_mcp_ollama.py  single_tool_agent_mcp_openai.py  stock_news_server.py
mcp_crash_course/src/servers/: async_stock_news.py  wikipedia_summary.py
mcp_crash_course/test/: agent.py  main.py
